# rust-lens

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  extension.js  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: COMPARISON.ja.md  COMPARISON.md  DESIGN.ja.md  DESIGN.md
examples/: Cargo.toml  e0277.rs  e0373.rs  e0373_async.rs  e0382.rs  e0499.rs  e0502.rs  e0505.rs  e0515.rs  e0597.rs  e0716.rs  iterator-move.rs
scripts/: check-rust-compat.js  install-local.sh  package-vsix.sh
test/: rust-diagnostics.test.js  security.test.js
test/fixtures/: e0502.jsonl
